--- a/src/views/person.ejs
+++ b/src/views/person.ejs
@@ -3,6 +3,9 @@
     <title>EJS Example</title>
 </head>
 <body>
+    <!-- partials -->
+    <% include partials/nav.ejs %>
+
     <h1>Hello</h1>
     <p>Welcome <%=id%></p>
     <p>Object = <%=obj.name%></p>
